Home con mas stilos e imagenes

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ figure{
 }
 .wrapper{
       display: grid;
-      grid-template: 85px 500px 1fr 1fr 1fr / 1fr;
+      grid-template: 5.3em 36em 1fr 50em 32em 15em / 1fr;
       grid-template-areas: "header"
                            "hero"
                            "store"
@@ -21,11 +21,13 @@ figure{
          
       font-family: 'Oswald', sans-serif;
       
-      grid-area: "header";
+      grid-area: header;
       
       
+      
+
       display: grid;
-      grid-template: 35px 50px / 1fr;
+      grid-template: 2.2em 3.1em / 1fr;
       grid-template-areas: "header-top"
                            "header-bottom"
                            ;
@@ -33,27 +35,31 @@ figure{
      
     }
 .header-top{
-   grid-area: "header-top";
+   grid-area: header-top;
    color: white;
    background-color: black;
-   
-
+   height: 2.2em;
+   position: fixed;
+   left: 0;
+   right:0;
    display: grid;
-   grid-template: 35px / 1.3fr 1fr;
-   grid-template-areas: "header-top-left"
-                        "header-top-right"
+   grid-template: 2.2em / 1.3fr 1fr;
+   grid-template-areas: "header-top-left header-top-right"
                         ;
    align-items: center;
+   padding-left: 5%;
+   padding-right: 5%;
 
 }
 .header-top a {
    color: white;
    text-decoration: none;
 
+
 }
 .header-top-left{
-   margin-left: 80px;
-   grid-area: "header-top-left";
+   
+   grid-area: header-top-left;
    display: flex;
 
 
@@ -65,70 +71,483 @@ figure{
    text-transform:uppercase;
 }
 .header-top-left h6 {
-   margin-left: 20px;
+   margin-left: 2em;
    font-size: 0.68em;
    align-self: center;
 
 }
 .header-top-right{
-   margin-right: 80px;
-   grid-area: "header-top-right";
-   justify-self: right;
    
+   grid-area: header-top-right;
+   justify-self: right;
+   height: inherit;
+   
+}
+.header-top-right-menu{
+   height: inherit;
 }
 .header-top-right-nav {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
+   height: inherit;
+   
+
 }
 .header-top-right-nav li{
    text-transform: uppercase;
    font-size: 0.70em;
-   
-   margin-right: 17px;
+   height: inherit;
+   margin-left: 1.6em;
+
+
+}
+
+.header-top-right-nav li span{
+   margin-left: 1em;
+}
+.header-top-right-nav li a{
+   height: inherit;
+   display: flex;
+   align-items: center;
+
 }
 .header-top-right-nav i{
-   margin-right: 5px;
+   margin-right: 0.5em;
 }
-.header-top-right-nav li span{
-   margin-left: 10px;
-}
-
 .header-bottom{
-   grid-area: "header-bottom";
-   border-bottom: 2px solid rgba(180,180,180,0.7);
+   font-family: 'Cuprum', sans-serif;
+   color: black;
+   grid-area: header-bottom;
+   border-bottom: 0.14em solid rgba(180,180,180,0.7);
    background-color: white;
-}
-.hero {
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   height: 3.1em;
+   
+   padding-left: 5%;
+   padding-right: 5%;
+   
 
-      grid-area: "hero";
+}
+.search{
+   
+   height: inherit;
+   width: 100%;
+   /*display: flex;*/
+   display: none;
+   align-items: center;
+}
+.searchForm{
+   width: 100%;
+}
+
+.searchInput{
+   border: none;
+   height: 3.2em;
+   width: 100%;
+   text-transform: uppercase;
+   font-family: 'Oswald', sans-serif;
+   font-size: 1.4rem;
+   outline: none;
+
+
+}
+.logo{
+   /*display: none;*/
+   margin:0;
+   padding: 0;
+   border: none;
+   line-height: 0;
+   
+}
+.logo img {
+   height: 1.9em;
+   
+   
+}
+.header-bottom-menu{
+   /*display: none;*/
+   
+   height: inherit;
+}
+
+.header-bottom-nav{
+   margin: 0;
+   padding: 0;
+   list-style: none;
+   font-size: 1.2em;
+   display: flex;
+   height: inherit;
+   
+}
+
+.header-bottom-nav li{
+   text-transform: uppercase;
+   margin-left: 1.6em;
+   height: inherit;
+
+
+
+}
+.header-bottom-nav li a {
+   color: black;
+   height: inherit;
+   text-decoration: none;
+   display: flex;
+   align-items: center;
+   
+   
+}
+
+.header-bottom-nav li a:hover {
+   color: LightGray;
+}
+
+.hero {
+      
+      
+      grid-area: hero;
       background-color: rgb(255,200,160);
       
      
     }
 .store {
 
-      grid-area: "store";
+      grid-area: store;
+      display: grid;
+      grid-template: 1fr 1fr 1fr / 1fr 1fr 1fr;
+      
+      padding-top: 1%;
+      padding-bottom: 1%;
+      padding-right: 5%;
+      padding-left: 5%;
+
       
      
     }
+.product {
+      
+      padding: 3%;
+      text-align: center;
+}
+.product-imageContainer {
+   margin:0;
+}
+.product-imageContainer img {
+   height: 350px;
+   width: 350px;
+
+}
+.product a {
+      display: inline-flex;
+      font-family: 'Oswald', sans-serif;
+      font-size: 0.85rem;
+      border-radius: 0.3rem;
+
+      text-decoration: none;
+      background-color: black;
+      width: 11rem;
+      height: 2.9rem;
+      color: white;
+      text-transform: uppercase;
+      border: 2px;
+      border-color: black;
+      border-style: solid;
+      
+      justify-content: center;
+      align-items: center;
+      transition: background-color 0.35s ease;
+      
+      
+      
+}
+.product a:hover {
+   background-color: white;
+   color: black;
+   
+   border-style: solid;
+}
+.product h3 {
+   font-size: 1.5rem;
+   margin-top: 0.3em;
+   margin-bottom: 0.3em;
+}
+.product h5 {
+   margin-top: 0.6em;
+   margin-bottom: 1.3em;
+}
 .categories {
 
       grid-area: "categories";
-      
-     
-    }
-.signup {
+      display: grid;
+      padding-top: 3%;
+      padding-bottom: 1%;
+      padding-right: 5%;
+      padding-left: 5%;
+      grid-template: 1fr 1fr / 1fr 1fr 1fr;
 
-      grid-area: "signup";
+      grid-template-areas: "ampollas ampollas cocktails"
+                           "tratamientos tratamientos tratamientos";
+      grid-gap: 2rem;
+      
+
       
      
     }
+.categories a {
+   text-decoration: none;
+   display: flex;
+      
+   justify-content: center;
+   align-items: center;
+   padding: 1rem;
+
+}
+.categories a div{
+   
+      border: 2px;
+      border-style: solid;
+      border-color: white;
+}
+
+
+.categories a:hover{
+   -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
+   filter: grayscale(100%);
+}
+
+
+.categories h2{
+   color: white;
+   font-size: 2.2rem;
+   padding-left: 3rem;
+   padding-right: 3rem;
+   text-transform: uppercase;
+      
+}
+.ampollas{
+      grid-area: ampollas;
+      background-color: red;
+      background-image: url(../images/ampollas.png);
+      background-repeat: no-repeat;
+      background-size: 1200px 600px;
+      background-position: center;
+
+      
+      
+
+}
+
+.cocktails{
+      grid-area: cocktails;
+      background-color: blue;
+      background-image: url(../images/cocktails1.png);
+      background-repeat: no-repeat;
+      background-size: 480px 480px;
+      background-position: center;
+}
+
+.tratamientos{
+      grid-area: tratamientos;
+      background-color: pink;
+}
+.signup {
+      
+      grid-area: signup;
+
+      padding-top: 3%;
+      padding-bottom: 3%;
+      padding-right: 5%;
+      padding-left: 5%;
+
+      
+     
+    }
+.signup h3{
+       font-size: 2.8rem;
+       text-transform: uppercase;
+       margin-bottom: 1rem;
+       margin-top: 1rem;
+}
+.signup p{
+      margin-bottom: 2rem;
+
+}
+.signup form{
+      text-align: center;
+      
+      
+}
+.signup input[type=text]{
+
+      display: block;
+      text-transform: uppercase;
+      font-family: 'Cuprum', sans-serif;
+      font-size: 1.5rem;
+
+      width: 30rem;
+      height: 3rem;
+      border:none;
+      border-bottom-width: 1px;
+      border-bottom-style: solid;
+      border-bottom-color: gray;
+      outline: none;
+
+
+
+      
+
+
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+
+}
+.signupName{
+
+   
+  
+   
+   
+   
+   
+   
+}
+.signupEmail{
+  
+  
+}
+.signupSubmit{
+      font-family: 'Oswald', sans-serif;
+      font-size: 0.9rem;
+      text-transform: uppercase;
+      background: black;
+      color: white;
+      border-style: solid;
+      border-color: black;
+      border-width: 2px;
+      border-radius: 0.5rem;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
+      padding-left: 4rem;
+      padding-right: 4rem;
+      margin-top: 2rem;
+      margin-bottom: 1rem;
+      transition: background-color 0.35s ease;
+}
+.signupSubmit:hover{
+   background-color: white;
+   color: black;
+   
+   border-style: solid;
+}
 .footer {
 
-      grid-area: "footer";
+      grid-area: footer;
+
+      display: grid;
+      grid-template: 3.5em 10em 2.5em / 1fr;
+      grid-template-areas: "footertop"
+                           "footerhero"
+                           "footerbottom"
+                           ;
+
       
      
     }
- 
+.footertop{
+      grid-area: footertop;
+      background-color: black;
+      
+      padding-right: 5%;
+      padding-left: 5%;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 3.5em;
+
+      
+}
+.logofooter {
+
+   margin: 1.5em;
+}
+.logofooter img{
+      height: 6em;
+      margin-top: 0.4em;
+}
+.footer-top-menu{
+      height: inherit;
+}
+.footer-top-nav{
+      margin: 0;
+      padding: 0;
+      list-style: none;
+      font-family: 'Oswald', sans-serif;
+      font-size: 1em;
+      display: flex;
+      height: inherit;
+
+}
+.footer-top-nav li{
+      text-transform: uppercase;
+      margin-left: 1.6em;
+      height: inherit;
+
+
+
+}
+.footer-top-nav li a {
+      color: white;
+      height: inherit;
+      text-decoration: none;
+      display: flex;
+      align-items: center;
+   
+   
+}
+.footer-top-nav li a:hover{
+   color: LightGray;
+
+}
+.footerhero{
+      grid-area: footerhero;
+      background-color: WhiteSmoke;
+      padding-right: 5%;
+      padding-left: 5%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom-color: lightgray;
+      border-bottom-style: solid;
+      border-bottom-width: 1px;
+}
+
+.footerhero i{
+   margin-left: 2.8rem;
+}
+.footerhero a{
+   text-decoration: none;
+   color: black;
+}
+.footerbottom{
+      grid-area: footerbottom;
+      padding-right: 5%;
+      padding-left: 5%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: 'Cuprum', sans-serif;
+}
+.footerbottom p {
+      margin-left: 2rem;
+      margin-right: 2rem;
+      margin-top: 0;
+      margin-bottom: 0;
+}
+
