--- a/css/style.css
+++ b/css/style.css
@@ -673,11 +673,11 @@ figure{
 }
 
 .footerhero i{
-   margin-left: 2.8rem;
+      margin-left: 2.8rem;
 }
 .footerhero a{
-   text-decoration: none;
-   color: black;
+      text-decoration: none;
+      color: black;
 }
 .footerbottom{
       grid-area: footerbottom;
@@ -694,4 +694,80 @@ figure{
       margin-top: 0;
       margin-bottom: 0;
 }
+.salonsHeader{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: gray;
+      color: white;
+      
+}
+.salonsHeader h1{
+      font-family: 'Cuprum', sans-serif;
+      font-weight: 200;
+      font-size: 1.3em;
+}
+.salonsHeader select {
 
+      font-family: 'Cuprum', sans-serif;
+      font-weight: 200;
+      margin-left: 0.2rem;
+      border: none;
+      color: white;
+      background-color: gray;
+      width: 7rem;
+      font-size: 1.3em;
+      outline: none;
+}
+
+.salonsList{
+      display: flex;
+      margin-left: 3rem;
+      margin-right: 3rem;
+      flex-wrap: wrap;
+      
+}
+.salonsRegion{
+      text-align: center;
+      margin:2rem;
+      
+
+}
+.salonsRegion h2{
+      color: blue;
+      font-family: 'Cuprum', sans-serif;
+      font-weight: 200;
+      font-size: 1.2em;
+
+}
+.salon{
+      margin-bottom: 1rem;
+}
+.salonInfo{
+   margin: 0;
+   padding: 0;
+   list-style: none;
+}
+.salonInfo li{
+   display: flex;
+   align-items: center;
+   padding-left: 1rem;
+}
+.salonInfo li h3{
+   font-weight: 500;
+   font-size: 1rem;
+   margin-bottom: 0.8rem;
+   margin-left: 1.5rem;
+   text-transform:uppercase;
+}
+.salonInfo li p{
+   margin-top: 0.3rem;
+   margin-bottom: 0.3rem;
+   margin-left: 0.3rem;
+   font-size: 0.75rem;
+}
+.salonInfo li i{
+   height: 0.8rem;
+   width: 1rem;
+   
+}
